tools/keycloak/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      automountServiceAccountToken: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.1
          args:
            ["start", "--proxy-headers=forwarded", "--hostname-strict=false"]
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
