tools/keycloak/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: keycloak.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.apps.digilab.network
      secretName: keycloak-tls
